log
Thu, Apr 17, 2025 11:55:27 AM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
eeef3b7
Thu, Apr 17, 2025 12:02:27 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
11896e9
Thu, Apr 17, 2025 12:10:09 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
8e945f6
Thu, Apr 17, 2025 12:11:34 PM: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
bfcbd8c
